<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_projects"
        android:icon="@drawable/ic_rounded_project"
        android:title="Project" />

    <item
        android:id="@+id/navigation_add_new"
        android:title="" />
<!--        android:icon="@drawable/icons8_plus_100" -->

    <item
        android:id="@+id/navigation_dashboards"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboards" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>